--- a/app/styles/_themes.scss
+++ b/app/styles/_themes.scss
@@ -39,15 +39,15 @@
     --color-main: var( --gray-4 );
     --color-bg: var( --gray-1 );
 
-    --accent-1: #55c1fa;
-    --accent-2: #2a80ad;
-    --accent-3: #f58479;
+    --accent-1: #4a9ecc;
+    --accent-2: #286a8e;
+    --accent-3: #c86d64;
 
     --warn: #5f4000;
 
     --accent-contrast: var( --gray-0 );
 
-    --color-light: var( --gray-6 );
+    --color-light: var( --gray-5 );
     --color-dark: var( --gray-0 );
 
     --box-shadow: 2px 2px 4px rgba( 0 0 0 / 0.25 );
